--- a/front/package.json
+++ b/front/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/atralice/omdb#readme",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "axios": "^0.21.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-redux": "^5.1.1",
-    "react-router-dom": "^4.3.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
