--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.0",
+    "beauty-stars": "^1.1.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^7.2.2",
